<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memoriza las cartas</string>
    <string name="action_settings">Ajustes</string>
    <string name="init_game">Iniciar juego</string>
    <string name="game_settings">Ajustes</string>
    <string name="game_credits">Créditos</string>
    <string name="game_mainimage">Logo aplicación</string>
    <string name="encredit">This app was fully developed by Pablo Borlaf Mena, is under GPLv3 license, and you can review the code on Github</string>
     <string name="credit">Esta aplicación esta desarrollada en su totalidad por Pablo Borlaf Mena, esta bajo la licencia GPLv3, el codigo está liberado y lo puedes ver en GitHub</string>
	<string name="credit2">Librerías de terceros usadas para esta aplicación:</string>
	<string name="twitter">&#xf099;</string>
	<string name="github">&#xf113;</string>
	<string name="web">&#xf0c1;</string>
	<string name="puntos">Puntos: </string>
	<string name="tjugados">Turnos jugados: </string>
	<string name="trestante">Turnos restantes: </string>
	<string name="reiniciar">Reiniciar</string>
	<string name="salir">Salir</string>
	<string name="pdificultad">Dificultad</string>
	<string name="sdificultad">Especifique la dificultad:</string>
	<string name="ddificultad">Cambie la dificultad del juego.</string>
	<string name="pturns">Turnos</string>
	<string name="sturns">Especifique los turnos:</string>
	<string name="dturns">Cambie el número máximo de turnos del juego.</string>
	<string name="creditsto">Librerías de terceros usadas para esta aplicación</string>
	
	 <string-array name="dificultades">
      <item>Fácil</item>
      <item>Medio</item>
      <item>Dificil</item>
   </string-array>
   <string-array name="codigodificultades">
      <item>12</item>
      <item>18</item>
      <item>24</item>
   </string-array>
    <string-array name="sturns">
      <item>20</item>
      <item>30</item>
      <item>40</item>
   </string-array>
   <string-array name="iturns">
	  <item>20</item>
      <item>30</item>
      <item>40</item>
   </string-array>
</resources>
