<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceCategory
            android:title="Ajustes del juego">

        <ListPreference
		   android:key="difficulty"
		   android:title="@string/pdificultad"
		   android:summary="@string/ddificultad"
		   android:dialogTitle="@string/pdificultad"
		   android:entries="@array/dificultades"
		   android:entryValues="@array/codigodificultades" />
        
        <EditTextPreference
		   android:key="turns"
		   android:title="@string/pturns"
		   android:summary="@string/dturns"
		   android:dialogTitle="@string/pturns"
		   android:inputType="number"
		   android:entries="@array/dificultades" />

    </PreferenceCategory>


</PreferenceScreen>